<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/black"
	android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/mosque_dusk"
		android:contentDescription="@string/mosque_at_dusk"/>
	<Button
        android:id="@+id/totan_reset_button"
		android:contentDescription="@string/reset_button"
        android:layout_height="72dp"
        android:paddingBottom="10dp"
        android:enabled="false"
        android:background="@drawable/totan_reset_button"
        android:layout_width="72dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"/>
	<Button
        android:id="@+id/totan_matrix_button"
        android:layout_height="72dp"
        android:layout_width="72dp"
        android:enabled="true"
        android:padding="10dp"
        android:background="@drawable/totan_matrix_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
		android:contentDescription="@string/matrix_button"/>
	<Button
	 	android:contentDescription="@string/roll_die_button"
        android:layout_width="50dp" 
        android:id="@+id/totan_rolldie_button" 
        android:layout_height="50dp" 
        android:enabled="false" 
        android:background="@drawable/totan_rolldie_button" 
        android:layout_alignBaseline="@+id/totan_encline_input" 
        android:layout_alignBottom="@+id/totan_encline_input" 
        android:layout_toEndOf="@+id/totan_encline_input"
        android:layout_marginStart="14dp"/>
	<TextView
          android:id="@+id/totan_line_text"
	      android:layout_height="wrap_content" 
	      android:text="@string/line_label"
	      android:textSize="14sp" 
	      android:layout_width="wrap_content" 
	      android:layout_alignBaseline="@+id/totan_encline_input" 
	      android:layout_alignBottom="@+id/totan_encline_input" 
	      android:layout_toStartOf="@+id/totan_encline_input"/>
	<TextView
	      android:visibility="invisible" 
	      android:layout_height="wrap_content" 
	      android:text="@string/pluses_label"
	      android:id="@+id/totan_pluses_text" 
	      android:textSize="14sp" 
	      android:enabled="true" 
	      android:layout_width="wrap_content" 
	      android:layout_alignBaseline="@+id/totan_pluses_input" 
	      android:layout_alignBottom="@+id/totan_pluses_input" 
	      android:layout_alignEnd="@+id/totan_line_text"/>

	<EditText
		android:id="@+id/totan_enc_input"
		android:layout_width="160dp"
		android:layout_height="48dp"
		android:layout_below="@+id/ruler"
		android:layout_centerHorizontal="true"
		android:paddingTop="10dp"
		android:background="@drawable/custom_edittext"
		android:enabled="true"
		android:hint="@string/encounter_number"
		android:importantForAutofill="no"
		android:inputType="number" />
	<EditText
        android:layout_width="160dp"
        android:id="@+id/totan_encline_input" 
        android:enabled="false" 
        android:layout_height="48dp"
        android:inputType="number" 
        android:background="@drawable/custom_edittext" 
        android:layout_below="@+id/totan_enc_input" 
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="12dp"
	 	android:hint="@string/line_number"
	 	android:importantForAutofill="no"/>
	<EditText
		android:importantForAutofill="no"
		android:layout_width="160dp"
		android:id="@+id/totan_pluses_input"
	   android:visibility="invisible"
	   android:enabled="false"
	   android:layout_height="wrap_content"
	   android:inputType="number"
	   android:background="@drawable/custom_edittext"
	   android:layout_below="@+id/totan_encline_input"
	   android:layout_centerHorizontal="true"
	   android:layout_marginTop="12dp"/>
   	<TextView
	   android:layout_width="wrap_content"
	   android:enabled="true"
	   android:id="@+id/totan_encres_text"
	   android:textColor="#F0F8FF"
	   android:textStyle="bold"
	   android:layout_height="wrap_content"
	   android:visibility="visible"
	   android:textSize="15sp"
	   android:layout_below="@+id/totan_pluses_input"
	   android:layout_centerHorizontal="true"
	   android:layout_marginTop="5dp"/>
   	<EditText
	   android:importantForAutofill="no"
	   android:layout_width="80dp"
	   android:id="@+id/ruler"
	   android:visibility="invisible"
	   android:enabled="false"
	   android:layout_height="120dp"
	   android:inputType="number"
	   android:background="@drawable/custom_edittext"
	   android:layout_alignParentTop="true"
	   android:layout_centerHorizontal="true"/>
   	<TextView
	   android:text="@string/encounter_label"
	   android:layout_width="wrap_content"
	   android:id="@+id/totan_encounter_text"
	   android:layout_height="wrap_content"
	   android:textSize="14sp"
	   android:layout_alignBaseline="@+id/totan_enc_input"
	   android:layout_alignBottom="@+id/totan_enc_input"
	   android:layout_toStartOf="@+id/totan_enc_input"/>
   	<ImageView
	   android:contentDescription="@string/tales_of_the_arabian_nights_logo"
	   android:id="@+id/logo"
	   android:layout_height="wrap_content"
	   android:src="@drawable/taleslogo_transparent"
	   android:layout_width="wrap_content"
	   android:layout_alignParentTop="true"
	   android:layout_centerHorizontal="true"/>
</RelativeLayout>
